--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
 Feel free to use it if you like. */
 
 enemy {
-  color: rgb(51, 51, 51);
+  background-image: url('shuriken.png');
+  height: 10px;
+  width: 10px;
 /*  display: inline;
   height: auto;
   line-height: 18px;
