--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ Feel free to use it if you like. */
   height: 10px;
   width: 10px;
 
-  animation: spin 0.5s infinite;
-  -webkit-animation: spin 0.5s infinite;
+  animation: spin 0.5s linear infinite;
+  -webkit-animation: spin 0.5s linear infinite;
   transform-origin: center center;
   -webkit-transform-origin: center center;
 }
